ActivitiesPage: dragAndDrop Orders

--- a/BlazorTool.Client/Components/ActivitySchedulerItem.razor
+++ b/BlazorTool.Client/Components/ActivitySchedulerItem.razor
@@ -30,7 +30,7 @@
         else //activity
         {
             <div class="scheduler-activity-details">
-                <div class="item-header">[@Item.AppointmentId] @Item.ActCategory</div>
+                <div class="item-header">[@Item.WorkOrderID] @Item.ActCategory</div>
                 <div class="item-body">
                     <span>@Item.ActPersonsName.Replace("#",", ")</span>
                 </div>
