--- a/BlazorTool.Client/Components/NewActivityFormComponent.razor
+++ b/BlazorTool.Client/Components/NewActivityFormComponent.razor
@@ -23,7 +23,7 @@
                                                  @bind-Value="@ActivityFormModel.DeviceID"
                                                  ValueField="@nameof(Device.MachineID)"
                                                  TextField="@nameof(Device.AssetNo)"
-                                                 Placeholder="@Localizer["WorkOrder_SelectDevice"]"
+                                                 Placeholder="@Localizer["Select_Device"]"
                                                  Filterable="true"
                                                  FilterOperator="@Telerik.Blazor.StringFilterOperator.Contains"
                                                  ShowClearButton="true"
@@ -42,7 +42,7 @@
                                                  @bind-Value="@ActivityFormModel.WorkOrderID"
                                                  ValueField="@nameof(WorkOrder.WorkOrderID)"
                                                  TextField="@nameof(WorkOrder.WODesc)"
-                                                 Placeholder="@Localizer["WorkOrder_SelectWorkOrder"]"
+                                                 Placeholder="@Localizer["SelectWorkOrder"]"
                                                  Filterable="true"
                                                  FilterOperator="@Telerik.Blazor.StringFilterOperator.Contains"
                                                  ShowClearButton="true"
